--- a/jobs/jabber/templates/ctl.erb
+++ b/jobs/jabber/templates/ctl.erb
@@ -2,6 +2,7 @@
 set -e -x
 
 JOB_NAME=jabber
+PACKAGE_NAME=hellopkg
 
 RUN_DIR=/var/vcap/sys/run/$JOB_NAME
 LOG_DIR=/var/vcap/sys/log/$JOB_NAME
@@ -13,7 +14,7 @@ case $1 in
     mkdir -p $RUN_DIR $LOG_DIR
     chown -R vcap:vcap $RUN_DIR $LOG_DIR
 
-    /var/vcap/src/hello.sh >> $LOG_DIR/jabber.stdout.log 2>> $LOG_DIR/jabber.stderr.log &
+    /var/vcap/jobs/$JOB_NAME/packages/$PACKAGE_NAME/hello.sh >> $LOG_DIR/jabber.stdout.log 2>> $LOG_DIR/jabber.stderr.log &
     echo $! > $PIDFILE
 
     ;;
