add deploy-errand package to build deploy-errand go code, update deploy service broker errand template to invoke go code

--- a/jobs/deploy-service-broker/templates/deploy-service-broker.sh.erb
+++ b/jobs/deploy-service-broker/templates/deploy-service-broker.sh.erb
@@ -1,8 +1,7 @@
 #!/bin/bash
 set -e -x
 
-export GOROOT=$(readlink -nf /var/vcap/packages/golang)
-export PATH=$GOROOT/bin:$PATH
+export DEPLOY_ERRAND_PACKAGE=$(readlink -nf /var/vcap/packages/deploy-errand)
+export PATH=$DEPLOY_ERRAND_PACKAGE/bin:$PATH
 
-go version
-
+deploy-errand
