--- a/jobs/deploy-service-broker/templates/deploy-service-broker.sh.erb
+++ b/jobs/deploy-service-broker/templates/deploy-service-broker.sh.erb
@@ -2,6 +2,10 @@
 set -e -x
 
 export DEPLOY_ERRAND_PACKAGE=$(readlink -nf /var/vcap/packages/deploy-errand)
-export PATH=$DEPLOY_ERRAND_PACKAGE/bin:$PATH
+export CF_CLI_PACKAGE=$(readlink -nf /var/vcap/packages/cf-cli)
+export PATH=$DEPLOY_ERRAND_PACKAGE/bin:$CF_CLI_PACKAGE/bin:$PATH
+export ADMIN_USER=<%= properties.spring_cloud_broker.cf.admin_user %>
+export ADMIN_PASSWORD=<%= properties.spring_cloud_broker.cf.admin_password %>
+export SYSTEM_DOMAIN=<%= properties.domain %>
 
 deploy-errand
