exec the Go program
This was kindly suggested by @cppforlife. It replaces the bash script process
with the Go errand rather than leaving the bash script in the process tree
waiting for the Go errand to terminate.

--- a/jobs/deploy-service-broker/templates/deploy-service-broker.sh.erb
+++ b/jobs/deploy-service-broker/templates/deploy-service-broker.sh.erb
@@ -8,4 +8,4 @@ export ADMIN_USER=<%= properties.spring_cloud_broker.cf.admin_user %>
 export ADMIN_PASSWORD=<%= properties.spring_cloud_broker.cf.admin_password %>
 export SYSTEM_DOMAIN=<%= properties.domain %>
 
-deploy-errand
+exec deploy-errand
